[tool.poetry]
name = "filedownload"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.115.9"
uvicorn = "^0.34.0"
pytz = "^2025.1"
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
requests = "^2.32.3"
python-dotenv = "^1.0.1"
gunicorn = "^23.0.0"
httpx = "^0.28.1"
python-multipart = "^0.0.20"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
